--- a/app/javascript/packs/application.js.erb
+++ b/app/javascript/packs/application.js.erb
@@ -8,10 +8,8 @@ require("turbolinks").start()
 require("@rails/activestorage").start()
 require("channels")
 require("jquery")
-import "<%= File.join(Gem.loaded_specs['bootstrap-sass'].full_gem_path, 'app', 'assets', 'javascripts', 'bootstrap-sprockets') %>"
-// Uncomment to copy all static images under ../images to the output folder and reference
-// them with the image_pack_tag helper in views (e.g <%= image_pack_tag 'rails.png' %>)
-// or the `imagePath` JavaScript helper below.
-//
-const images = require.context('../images', true)
-const imagePath = (name) => images(name, true)
+// import jQuery from 'jquery'
+import "<%= File.join(Gem.loaded_specs['bootstrap-sass'].full_gem_path, 'assets', 'javascripts', 'bootstrap-sprockets') %>"
+
+// const images = require.context('../images', true)
+// const imagePath = (name) => images(name, true)
