--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,9 +14,10 @@
  *= require_self
  */
 @import "bootstrap-sprockets";
-@import "bootstrap";
 @import "theme";
+@import "bootstrap";
 @import "dashboards";
+@import "expenses";
 
 .navbar-inverse {
   border: 0;
