--- a/app/javascript/packs/application.js.erb
+++ b/app/javascript/packs/application.js.erb
@@ -8,8 +8,6 @@ require("turbolinks").start()
 require("@rails/activestorage").start()
 require("channels")
 require("jquery")
-// import jQuery from 'jquery'
-import "<%= File.join(Gem.loaded_specs['bootstrap-sass'].full_gem_path, 'assets', 'javascripts', 'bootstrap-sprockets') %>"
-
-// const images = require.context('../images', true)
-// const imagePath = (name) => images(name, true)
+import './custom_bootstrap'
+window.jQuery = $;
+window.$ = $;
