--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -62,17 +62,17 @@
             <tr>
               <td class="date">
                 <div class="day"><%= expense.date.strftime("%d") %></div>
-                <div class="month"><%= expense.date.strftime("%m") %></div>
+                <div class="month"><%= expense.date.strftime("%b") %></div>
               </td>
               <td>
                 <div>
-                  <span class="type"><%= expense.type %></span>
+                  <span class="type"><%= expense.type_transaction %></span>
                 </div>
                 <div>
                   <span class="concept"><%= expense.concept %></span>
                 </div>
               </td>
-              <td class="category text-right"><%= expense.categories.name %></td>
+              <td class="category text-right"><%= expense.category.name %></td>
               <td class="text-right" style="width: 170px;">
                 <div class="amount"><%= expense.amount %></div>
                 <div class="actions">
