--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -39,25 +39,7 @@
           <a href="#" class="btn btn-success pull-left" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span> New Expense</a>
 
           <!-- Modal -->
-          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                  </button>
-                </div>
-                <div class="modal-body">
-                  ...
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-              </div>
-            </div>
-          </div>
+          <%= render 'form'%>
 
           <h4 class="dropdown pull-right">
             <button type="button" class="dropdown-toggle btn btn-link" data-toggle="dropdown">April 2016 <span class="caret"></span></button>
@@ -99,7 +81,7 @@
                 <div class="amount"><%= expense.amount %></div>
                 <div class="actions">
                   <a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a>
-                  <a href="#"><span class="glyphicon glyphicon-trash"></span> Delete</a>
+                  <%= link_to content_tag(:span, "Delete", class: "glyphicon glyphicon-trash"), expense, method: :delete %>
               </td>
             </tr>
           <% end %>
