--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -25,7 +25,7 @@
           <div class="summary-label">Total</div>
         </diV>
         <div class="summary-box col-md-4 text-center">
-          <div class="summary-value">2</div>
+          <div class="summary-value"><%= @expenses.length %></div>
           <div class="summary-label">Transactions</div>
         </div>
         <div class="summary-box col-md-4 text-center">
@@ -36,8 +36,7 @@
 
       <div class="row" style="margin-top: 20px;">
         <div class="col-md-12">
-          <a href="#" class="btn btn-success pull-left" data-toggle="modal" data-target="#exampleModal"><span class="glyphicon glyphicon-plus"></span> New Expense</a>
-
+          <%= link_to "New Expense", new_expense_path, remote: true, class: "btn btn-success pull-left" %>
           <!-- Modal -->
           <%= render 'form'%>
 
@@ -80,7 +79,7 @@
               <td class="text-right" style="width: 170px;">
                 <div class="amount"><%= expense.amount %></div>
                 <div class="actions">
-                  <a href="#"><span class="glyphicon glyphicon-edit"></span> Edit</a>
+                  <%= link_to 'Editar', edit_expense_path(expense.id), remote: true %>
                   <%= link_to content_tag(:span, "Delete", class: "glyphicon glyphicon-trash"), expense, method: :delete %>
               </td>
             </tr>
