--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,34 @@
         </div>
       </div>
     </nav>
+    <% if flash[:notice] %>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 col-md-offset-8">
+            <div class="alert alert-success" role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <%= flash[:notice] %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+    <% if flash[:alert] %>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-4 col-md-offset-8">
+            <div class="alert alert-danger" role="alert">
+              <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+              <%= flash[:alert] %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
