--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -19,7 +19,7 @@
                   </div>
                   <div class="form-group col-md-6">
                     <%= f.label :Date %>
-                    <%= f.text_field :date, type:'date' ,class: "form-control", class: "form-control"%>
+                    <%= f.date_field :date, class: "form-control" %>
                   </div>
                 </div>
               </div>
@@ -37,7 +37,7 @@
                   </div>
                   <div class="form-group col-md-6">
                     <%= f.label :Amount %>
-                    <%= f.number_field(:amount, class: "form-control align-right")%>
+                    <%= f.number_field :amount, step: 0.01, min: 0, class: "form-control text-right" %>
                   </div>
                 </div>
               </div>
