--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -4,16 +4,16 @@
       <h4 class="filter-header">Transaction Type <span>Selecciona para filtrar</span></h4>
       
       <div class="list-group filter-type">
-        <%= link_to  "Purchase", expenses_path(expense_type: 'purchase'), class: "list-group-item" %>
-        <%= link_to  "Withdrawal", expenses_path(expense_type: 'withdrawal'), class: "list-group-item" %>
-        <%= link_to  "Transfer", expenses_path(expense_type: 'transfer'), class: "list-group-item" %>
-        <%= link_to  "Payment", expenses_path(expense_type: 'payment'), class: "list-group-item" %>
+        <%= link_to  "Purchase", expenses_path(type_transaction: 'Purchase'), class: "list-group-item" %>
+        <%= link_to  "Withdrawal", expenses_path(type_transaction: 'Withdrawal'), class: "list-group-item" %>
+        <%= link_to  "Transfer", expenses_path(type_transaction: 'Transfer'), class: "list-group-item" %>
+        <%= link_to  "Payment", expenses_path(type_transaction: 'Payment'), class: "list-group-item" %>
       </div>
 
       <h4 class="filter-header">Categoría <span>Selecciona para filtrar</span></h4>
       <div class="list-group filter-type">
         <% @categories.each do |category|%>
-          <a href="#" class="list-group-item"><%= category.name %></a>
+          <%= link_to  category.name, expenses_path(category_id: category), class: "list-group-item" %>
         <% end %>
       </div>
     </div>
@@ -21,30 +21,49 @@
     <div class="col-md-9 index-data">
       <div class="row" style="margin-top: 10px;">
         <div class="summary-box col-md-4 text-center">
-          <div class="summary-value">$2,500,000</div>
+          <div class="summary-value">$ <%= @expenses.sum(:amount) %></div>
           <div class="summary-label">Total</div>
         </diV>
         <div class="summary-box col-md-4 text-center">
-          <div class="summary-value"><%= @expenses.length %></div>
+          <div class="summary-value"><%= @expenses.count %></div>
           <div class="summary-label">Transactions</div>
         </div>
         <div class="summary-box col-md-4 text-center">
-          <div class="summary-value">$1,000,000</div>
+          <div class="summary-value">$ <%= @expenses.average(:amount) %></div>
           <div class="summary-label">Average</div>
         </div>
       </div>
 
       <div class="row" style="margin-top: 20px;">
         <div class="col-md-12">
-          <%= link_to "New Expense", new_expense_path, remote: true, class: "btn btn-success pull-left" %>
+          <%= link_to  new_expense_path, remote: true, class: "btn btn-success pull-left" do %>
+            <span class="glyphicon glyphicon-plus"></span> New Expense
+          <% end %>
           <!-- Modal -->
           <%= render 'form'%>
 
           <h4 class="dropdown pull-right">
-            <button type="button" class="dropdown-toggle btn btn-link" data-toggle="dropdown">April 2016 <span class="caret"></span></button>
+            <button type="button" class="dropdown-toggle btn btn-link" data-toggle="dropdown">
+              <% if params[:month] %>
+                <%= Date::MONTHNAMES[params[:month].to_i] + ' ' + params[:year] %>
+              <% else %>
+                Filtrar por:
+              <% end %>
+              <span class="caret"></span>
+            </button>
             <ul class="dropdown-menu" role="menu">
-              <li role="presentation"><a href="#">April 2016</a></li>
-              <li role="presentation"><a href="#">March 2016</a></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[Date.today.month]+ ' ' + Date.today.year.to_s, expenses_path(month: Date.today.month, year: Date.today.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[1.month.ago.month]+ ' ' + 1.month.ago.year.to_s, expenses_path(month: 1.month.ago.month, year: 1.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[2.month.ago.month]+ ' ' + 2.month.ago.year.to_s, expenses_path(month: 2.month.ago.month, year: 2.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[3.month.ago.month]+ ' ' + 3.month.ago.year.to_s, expenses_path(month: 3.month.ago.month, year: 3.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[4.month.ago.month]+ ' ' + 4.month.ago.year.to_s, expenses_path(month: 4.month.ago.month, year: 4.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[5.month.ago.month]+ ' ' + 5.month.ago.year.to_s, expenses_path(month: 5.month.ago.month, year: 5.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[6.month.ago.month]+ ' ' + 6.month.ago.year.to_s, expenses_path(month: 6.month.ago.month, year: 6.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[7.month.ago.month]+ ' ' + 7.month.ago.year.to_s, expenses_path(month: 7.month.ago.month, year: 7.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[8.month.ago.month]+ ' ' + 8.month.ago.year.to_s, expenses_path(month: 8.month.ago.month, year: 8.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[9.month.ago.month]+ ' ' + 9.month.ago.year.to_s, expenses_path(month: 9.month.ago.month, year: 9.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[10.month.ago.month]+ ' ' + 10.month.ago.year.to_s, expenses_path(month: 10.month.ago.month, year: 10.month.ago.year) %></li>
+              <li role="presentation"><%= link_to Date::MONTHNAMES[11.month.ago.month]+ ' ' + 11.month.ago.year.to_s, expenses_path(month: 11.month.ago.month, year: 11.month.ago.year) %></li>
               <!-- more months -->
             </ul>
           </h4>
@@ -79,8 +98,12 @@
               <td class="text-right" style="width: 170px;">
                 <div class="amount"><%= expense.amount %></div>
                 <div class="actions">
-                  <%= link_to 'Editar', edit_expense_path(expense.id), remote: true %>
-                  <%= link_to content_tag(:span, "Delete", class: "glyphicon glyphicon-trash"), expense, method: :delete %>
+                  <%= link_to  edit_expense_path(expense), remote: true do %>
+                    <span class="glyphicon glyphicon-edit"></span> Edit
+                  <% end %>
+                  <%= link_to expense, method: :delete, data: { confirm: "Are you sure?" } do %>
+                    <span class="glyphicon glyphicon-trash"></span> Delete
+                  <% end %>
               </td>
             </tr>
           <% end %>
