--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -17,15 +17,15 @@
                     <%= f.label :Type %>
                     <%= f.select(:type_transaction, ['Purchase', 'Withdrawal', 'Transfer', 'Payment'], {:include_blank => false}, {:class => 'form-control'})%>
                   </div>
-                  <div class="form-group col-md-6">
-                    <%= f.label :Date %>
+                  <div class="form-group col-md-6 validateDate">
+                    <%= f.label :Date, class: "labelDate" %>
                     <%= f.date_field :date, class: "form-control" %>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="form-group">
-              <%= f.label :Concept %>
+            <div class="form-group validateConcept">
+              <%= f.label :Concept, class: "labelConcept" %>
               <%= f.text_field :concept, class: "form-control", class: "form-control"%>
             </div>
             <div class="row">
@@ -37,7 +37,7 @@
                   </div>
                   <div class="form-group col-md-6">
                     <%= f.label :Amount %>
-                    <%= f.number_field :amount, step: 0.01, min: 0, class: "form-control text-right" %>
+                    <%= f.number_field :amount, step: 0.01, min: 0, value: 0, class: "form-control text-right" %>
                   </div>
                 </div>
               </div>
