--- a/app/views/expenses/edit.js.erb
+++ b/app/views/expenses/edit.js.erb
@@ -1,4 +1,1 @@
-$('<%= j render "form", title: "Modificar Producto" %>').on('hidden.bs.modal', function (e) {
-  $(this).remove();
-  $('.modal-backdrop').remove();
-}).modal();
+$('<%= j render "form", title: "Modificar Producto" %>').modal();
