Agreaga gema graficas

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -23,7 +23,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Últimos 6 Meses</div>
         <div class="panel-body">
-          <div id="expenses-chart" style="height: 250px;"></div>
+          <div id="expenses-chart" style="height: 250px;"><%= column_chart Expense.group_by_month(:date).count %></div>
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Por Día</div>
         <div class="panel-body">
-          <div id="daily-expenses-chart" style="height: 250px;"></div>
+          <div id="daily-expenses-chart" style="height: 250px;"><%= pie_chart Expense.group_by_month(:date).count %></div>
         </div>
       </div>
     </div>
@@ -56,3 +56,4 @@
     </div>
   </div>
 </div>
+
