Agrega graficas configuradas

--- a/app/javascript/packs/application.js.erb
+++ b/app/javascript/packs/application.js.erb
@@ -10,6 +10,8 @@ require("channels")
 require("jquery")
 require("chartkick")
 require("chart.js")
+require("chartkick").use(require("highcharts"))
 import './custom_bootstrap'
 window.jQuery = $;
 window.$ = $;
+
