--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,19 +1,19 @@
 <div class="container">
   <div class="row">
     <div class="total-box col-md-3">
-      $200,000
+      <%= number_to_currency(@today) %>
       <span>HOY</span>
     </div>
     <div class="total-box col-md-3">
-      $140,000
+      <%= number_to_currency(@yesterday) %>
       <span>AYER</span>
     </div>
     <div class="total-box col-md-3">
-      $7,500,000
+      <%= number_to_currency(@this_month) %>
       <span>ESTE MES</span>
     </div>
     <div class="total-box col-md-3">
-      $6,200,000
+      <%= number_to_currency(@last_month) %>
       <span>MES PASADO</span>
     </div>
   </div>
@@ -23,7 +23,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Últimos 6 Meses</div>
         <div class="panel-body">
-          <div id="expenses-chart" style="height: 250px;"><%= column_chart Expense.group_by_month(:date).count %></div>
+          <div id="expenses-chart" style="height: 250px;"><%= column_chart @column_data, stacked: true, prefix: "$", thousands: ",", height: "250px", legend: "bottom" %></div>
         </div>
       </div>
     </div>
@@ -31,7 +31,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Por Día</div>
         <div class="panel-body">
-          <div id="daily-expenses-chart" style="height: 250px;"><%= pie_chart Expense.group_by_month(:date).count %></div>
+          <div id="daily-expenses-chart" style="height: 250px;"><%= column_chart @per_day, height: "250px", prefix: "$", thousands: ",", height: "250px", legend: "bottom" %></div>
         </div>
       </div>
     </div>
@@ -42,7 +42,7 @@
       <div class="panel panel-default">
         <div class="panel-heading">Por Categoría</div>
         <div class="panel-body">
-          <div id="category-chart" style="height: 250px;"></div>
+          <div id="category-chart" style="height: 250px;"><%= pie_chart @per_category, prefix: "$", thousands: ",", height: "250px", donut: true%></div>
         </div>
       </div>
     </div>
@@ -50,10 +50,13 @@
       <div class="panel panel-default">
         <div class="panel-heading">Acumulado</div>
         <div class="panel-body">
-          <div id="month-acc" style="height: 250px;"></div>
+          <div id="month-acc" style="height: 250px;"><%= line_chart [
+              {name: @name_last_month, data: @acum_last_month},
+              {name: @name_this_month, data: @acum_this_month}
+              ], prefix: "$", thousands: ",", height: "250px", legend: "bottom" %>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
