--- a/app/views/expenses/_row.html.erb
+++ b/app/views/expenses/_row.html.erb
@@ -13,7 +13,7 @@
   </td>
   <td class="category text-right"><%= expense.category.name %></td>
   <td class="text-right" style="width: 170px;">
-    <div class="amount"><%= expense.amount %></div>
+    <div class="amount"><%= number_to_currency(expense.amount) %></div>
     <div class="actions">
       <%= link_to  edit_expense_path(expense), remote: true do %>
         <span class="glyphicon glyphicon-edit"></span> Edit
