--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,74 +1,76 @@
 <div class="container">
   <div class="row">
     <div class="col-md-3">
-      <h4 class="filter-header">Transaction Type <span>Selecciona para filtrar</span></h4>
-      
-      <div class="list-group filter-type">
-        <%= link_to  "Purchase", expenses_path(type_transaction: "Purchase"), class: "list-group-item" %>
-        <%= link_to  "Withdrawal", expenses_path(type_transaction: "Withdrawal"), class: "list-group-item" %>
-        <%= link_to  "Transfer", expenses_path(type_transaction: "Transfer"), class: "list-group-item" %>
-        <%= link_to  "Payment", expenses_path(type_transaction: "Payment"), class: "list-group-item" %>
-      </div>
-
-      <h4 class="filter-header">Categoría <span>Selecciona para filtrar</span></h4>
-      <div class="list-group filter-type">
-        <% @categories.each do |category|%>
-          <%= link_to  category.name, expenses_path(category_id: category), class: "list-group-item" %>
-        <% end %>
-      </div>
-    </div>
-
-    <div class="col-md-9 index-data">
-      <div class="row" style="margin-top: 10px;">
-        <div class="summary-box col-md-4 text-center">
-          <div class="summary-value"><%= number_to_currency(@expenses.sum(:amount)) %></div>
-          <div class="summary-label">Total</div>
-        </diV>
-        <div class="summary-box col-md-4 text-center">
-          <div class="summary-value"><%= @expenses.count %></div>
-          <div class="summary-label">Transactions</div>
+      <%= form_tag expenses_path, method: :get do %>
+        <h4 class="filter-header">Transaction Type <span>Selecciona para filtrar</span></h4>
+        <div class="list-group filter-type">
+          <%= link_to "Purchase", expenses_path(type_transaction: "Purchase"), class:  "list-group-item"%>
+          <%= link_to  "Withdrawal", expenses_path(type_transaction: "Withdrawal"), class:  "list-group-item"%>
+          <%= link_to  "Transfer", expenses_path(type_transaction: "Transfer"), class:  "list-group-item"%>
+          <%= link_to  "Payment", expenses_path(type_transaction: "Payment"), class: "list-group-item"%>
         </div>
-        <div class="summary-box col-md-4 text-center">
-          <div class="summary-value"><%= number_to_currency(@expenses.average(:amount)) %></div>
-          <div class="summary-label">Average</div>
-        </div>
-      </div>
 
-      <div class="row" style="margin-top: 20px;">
-        <div class="col-md-12">
-          <%= link_to  new_expense_path, remote: true, class: "btn btn-success pull-left" do %>
-            <span class="glyphicon glyphicon-plus"></span> New Expense
+        <h4 class="filter-header">Categoría <span>Selecciona para filtrar</span></h4>
+        <div class="list-group filter-type">
+          <% @categories.each do |category|%>
+            <%= link_to  category.name, expenses_path(category_id: category), class: "list-group-item"%>
           <% end %>
-          <!-- Modal -->
-          <%= render 'form'%>
-
-          <h4 class="dropdown pull-right">
-            <button type="button" class="dropdown-toggle btn btn-link" data-toggle="dropdown">
-              <% if params[:month] %>
-                <%= Date::MONTHNAMES[params[:month].to_i] + ' ' + params[:year] %>
-              <% else %>
-                Filtrar por:
-              <% end %>
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" role="menu">
-              <li role="presentation"><%= link_to Date::MONTHNAMES[Date.today.month]+ ' ' + Date.today.year.to_s, expenses_path(month: Date.today.month, year: Date.today.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[1.month.ago.month]+ ' ' + 1.month.ago.year.to_s, expenses_path(month: 1.month.ago.month, year: 1.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[2.month.ago.month]+ ' ' + 2.month.ago.year.to_s, expenses_path(month: 2.month.ago.month, year: 2.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[3.month.ago.month]+ ' ' + 3.month.ago.year.to_s, expenses_path(month: 3.month.ago.month, year: 3.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[4.month.ago.month]+ ' ' + 4.month.ago.year.to_s, expenses_path(month: 4.month.ago.month, year: 4.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[5.month.ago.month]+ ' ' + 5.month.ago.year.to_s, expenses_path(month: 5.month.ago.month, year: 5.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[6.month.ago.month]+ ' ' + 6.month.ago.year.to_s, expenses_path(month: 6.month.ago.month, year: 6.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[7.month.ago.month]+ ' ' + 7.month.ago.year.to_s, expenses_path(month: 7.month.ago.month, year: 7.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[8.month.ago.month]+ ' ' + 8.month.ago.year.to_s, expenses_path(month: 8.month.ago.month, year: 8.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[9.month.ago.month]+ ' ' + 9.month.ago.year.to_s, expenses_path(month: 9.month.ago.month, year: 9.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[10.month.ago.month]+ ' ' + 10.month.ago.year.to_s, expenses_path(month: 10.month.ago.month, year: 10.month.ago.year) %></li>
-              <li role="presentation"><%= link_to Date::MONTHNAMES[11.month.ago.month]+ ' ' + 11.month.ago.year.to_s, expenses_path(month: 11.month.ago.month, year: 11.month.ago.year) %></li>
-              <!-- more months -->
-            </ul>
-          </h4>
         </div>
       </div>
+
+      <div class="col-md-9 index-data">
+        <div class="row" style="margin-top: 10px;">
+          <div class="summary-box col-md-4 text-center">
+            <div class="summary-value"><%= number_to_currency(@expenses.sum(:amount)) %></div>
+            <div class="summary-label">Total</div>
+          </diV>
+          <div class="summary-box col-md-4 text-center">
+            <div class="summary-value"><%= @expenses.count %></div>
+            <div class="summary-label">Transactions</div>
+          </div>
+          <div class="summary-box col-md-4 text-center">
+            <div class="summary-value"><%= number_to_currency(@expenses.average(:amount)) %></div>
+            <div class="summary-label">Average</div>
+          </div>
+        </div>
+
+        <div class="row" style="margin-top: 20px;">
+          <div class="col-md-12">
+            <%= link_to  new_expense_path, remote: true, class: "btn btn-success pull-left" do %>
+              <span class="glyphicon glyphicon-plus"></span> New Expense
+            <% end %>
+            <!-- Modal -->
+            <%= render 'form'%>
+
+            <h4 class="dropdown pull-right">
+              <button type="button" class="dropdown-toggle btn btn-link" data-toggle="dropdown">
+                <% if params[:month] %>
+                  <%= Date::MONTHNAMES[params[:month].to_i] + ' ' + params[:year] %>
+                <% else %>
+                  Filtrar por:
+                <% end %>
+                <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li role="presentation"><%= link_to Date::MONTHNAMES[Date.today.month]+ ' ' + Date.today.year.to_s, expenses_path(month: Date.today.month, year: Date.today.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[1.month.ago.month]+ ' ' + 1.month.ago.year.to_s, expenses_path(month: 1.month.ago.month, year: 1.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[2.month.ago.month]+ ' ' + 2.month.ago.year.to_s, expenses_path(month: 2.month.ago.month, year: 2.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[3.month.ago.month]+ ' ' + 3.month.ago.year.to_s, expenses_path(month: 3.month.ago.month, year: 3.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[4.month.ago.month]+ ' ' + 4.month.ago.year.to_s, expenses_path(month: 4.month.ago.month, year: 4.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[5.month.ago.month]+ ' ' + 5.month. ago.year.to_s, expenses_path(month: 5.month.ago.month, year: 5.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[6.month.ago.month]+ ' ' + 6.month.ago.year.to_s, expenses_path(month: 6.month.ago.month, year: 6.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[7.month.ago.month]+ ' ' + 7.month.ago.year.to_s, expenses_path(month: 7.month.ago.month, year: 7.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[8.month.ago.month]+ ' ' + 8.month.ago.year.to_s, expenses_path(month: 8.month.ago.month, year: 8.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[9.month.ago.month]+ ' ' + 9.month.ago.year.to_s, expenses_path(month: 9.month.ago.month, year: 9.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[10.month.ago.month]+ ' ' + 10.month.ago.year.to_s, expenses_path(month: 10.month.ago.month, year: 10.month.ago.year) %></li>
+                <li role="presentation"><%= link_to Date::MONTHNAMES[11.month.ago.month]+ ' ' + 11.month.ago.year.to_s, expenses_path(month: 11.month.ago.month, year: 11.month.ago.year) %></li>
+                <!-- more months -->
+              </ul>
+            </h4>
+          </div>
+        </div>
+      <% end %>
+      
 
       <table id="expenses-table" class="table table-hover" style="margin-top: 20px;">
         <thead>
