--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -37,7 +37,11 @@
                   </div>
                   <div class="form-group col-md-6">
                     <%= f.label :Amount %>
-                    <%= f.number_field :amount, step: 0.01, min: 0, class: "form-control text-right" %>
+                    <% if @expense.new_record? %>
+                      <%= f.number_field :amount, step: 0.01, min: 0, class: "form-control text-right", value: 0%>
+                    <% else %>
+                      <%= f.number_field :amount, step: 0.01, min: 0, class: "form-control text-right"%>
+                    <% end %>
                   </div>
                 </div>
               </div>
