--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -19,7 +19,11 @@
                   </div>
                   <div class="form-group col-md-6 validateDate">
                     <%= f.label :Date, class: "labelDate" %>
-                    <%= f.date_field :date, class: "form-control" %>
+                    <% if @expense.new_record? %>
+                      <%= f.date_field :date, class: "form-control", value: Date.today %>
+                    <% else %>
+                      <%= f.date_field :date, class: "form-control" %>
+                    <% end %>
                   </div>
                 </div>
               </div>
